# portfolio_exporter

./: .env  .env.example  .gitignore  AGENTS.md  GEMINI.md  LOGBOOK.md  MANIFEST.in  Makefile  README.md  agent.md  codex_cloud_quote_check.csv  daily_pulse.py  historic_prices.csv  historic_prices.py  historic_prices_sample.csv  live_feed.py  live_quotes.csv  main.py  market_analyzer.py  meme_scan.csv  nav_history.csv  net_liq_history_export.py  option_chain_snapshot.py  orchestrate_dataset.py  portfolio_2025-05-18.csv  portfolio_greeks.py  positions_report.py  pulse.csv  pyproject.toml  pytest.ini  pytest_output.txt  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  sample_portfolio.csv  sample_trades.csv  sitecustomize.py  tech_signals.py  tech_signals_ibkr.py  (+4 more)
.codex/: memory.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  psd-ci.yml  psd-sim.yml  psd-smoke.yml  sanity-excel.yml  sanity-menus.yml  sanity.yml
.local/: combos.db
.tmp_test_run/momo3/: micro_momo_alerts.json  micro_momo_dashboard.html  micro_momo_scored.csv
.tmp_tr_out/: trades_combos.csv  trades_report.csv  trades_report_manifest.json
.tmp_trdash/: trades_dashboard.html  trades_dashboard_manifest.json
.tmp_trexcel/: exec.csv  trades_report.xlsx  trades_report_manifest.json
apps/api/: main.py
apps/web/: audit.json  dep-tree.before.txt  index.html  openapi.json  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.workspace.ts
config/: rules.yaml  symbol_aliases.json
deploy/procfiles/: psd.Procfile
deploy/systemd/: psd-ingestor.service  psd-scanner.service  psd-web.service
docs/: PDR.md  codex_runs.md  manual.md  nginx.sse.conf  prometheus.rules.yml
docs/assets/: theme.css
docs/codex/: CLI_HELPERS_DRIFT_V1_2025-08-29_09-21_v1.md  COMBO_DB_MAINT_V1_2025-08-14_13-18_v1.md  DEPENDENCY_BOARD_V1_2025-09-20_18-52_v1.md  DOCS_DX_SWEEP_V1_2025-09-07_08-27_v1.md  DOCTOR_FIXES_HINTS_V1_2025-08-29_10-53_v1.md  MENUS_DRYRUN_WIRING_V1_2025-08-29_12-03_v1.md  MENUS_QUICK_ACTIONS_V1_2025-09-07_08-02_v1.md  ORDER_BUILDER_PRESETS_V1_2025-08-30_04-10_v1.md  ROLL_MANAGER_DRYRUN_V1_2025-08-14_12-12_v1.md  TRADES_DASHBOARD_V1_2025-08-30_04-51_v1.md  TRADES_MENU_PREVIEWS_V2_2025-08-29_14-47_v1.md  VITE_VITEST_MAJOR_UPGRADE_PLAN_V1_2025-09-20_18-50_v1.md
ibkr_env/: pyvenv.cfg
iv_history/: AAPL.csv  ABNB.csv  AEO.csv  BUD.csv  CAT.csv  COST.csv  CRWV.csv  DIA.csv  DLTR.csv  DUK.csv  EIX.csv  ELV.csv  FCX.csv  GDX.csv  HIMS.csv  IWM.csv  JNJ.csv  KRBN.csv  LMT.csv  MCD.csv  MSFT.csv  NOC.csv  NVDA.csv  O.csv  PDBC.csv  PEP.csv  PG.csv  PLD.csv  PM.csv  QCOM.csv  QQQ.csv  REGN.csv  RSP.csv  SCHD.csv  SHY.csv  SPY.csv  STZ.csv  TLT.csv  TMDX.csv  TTD.csv  (+6 more)
legacy/: daily_pulse.py  historic_prices.py  live_feed.py  net_liq_history_export.py  option_chain_snapshot.py  orchestrate_dataset.py  portfolio_greeks.py  tech_signals_ibkr.py  trades_report.py  update_tickers.py
local_backup/.tmp_trfilters/: timings.csv  trades_clusters.csv  trades_clusters_debug.csv  trades_combos.csv  trades_intent_by_underlying.csv  trades_intent_summary.csv  trades_report_filtered.csv  trades_report_manifest.json
portfolio_exporter/: __init__.py  main.py  psd_adapter.py  psd_rules.py
portfolio_exporter/assets/: theme.css
portfolio_exporter/config/: settings.yaml
portfolio_exporter/core/: alerts.py  caps_dash.py  chain.py  cli.py  (+34 more)
psd/: __init__.py  runner.py
run/: psd-pids.json  psd.db  psd.db-shm  psd.db-wal
schemas/: report_summary.schema.json  time_series_summary.schema.json
scripts/: memory.py  psd_perf_harness.py  psd_sim.py  psd_start.py  run_sentinel.py  sanity_cli_helpers.sh  sanity_daily_hints_excel.sh  sanity_doctor_fixes.sh  sanity_main_tasks.sh  sanity_menus_dryrun.sh  sanity_menus_quick_actions.sh  sanity_order_builder_presets.sh  sanity_trades_dashboard.sh  sanity_trades_menu_underlying.sh  sanity_trades_report_excel.sh  sanity_trades_report_filters.sh  sim_sentinel_sched.py
src/: __init__.py  analysis.py  data_fetching.py  interactive.py  offline.py  reporting.py  utils.py
tests/: test_alert_quieting.py  test_alerts.py  test_api_stats_updated_at.py  test_async_guardrails.py  test_auto_preflight_generates_greeks.py  test_auto_producers.py  test_breakers.py  test_budgets.py  test_calc_portfolio_greeks.py  test_caps_dashboard.py  test_chain_fetch.py  test_chain_latest_pick.py  test_cli.py  test_cli_commands.py  test_cli_flags_drift.py  test_cli_rollup.py  test_cli_smoke.py  test_combo_butterfly.py  test_combo_calendar.py  test_combo_condor.py  test_combo_db_maint_cli.py  test_combo_matcher.py  test_combo_persistence.py  test_combos.py  test_concurrency_guard.py  test_config.py  test_daily_pulse.py  test_daily_report.py  test_daily_report_expiry_radar.py  test_daily_report_skin.py  test_digests.py  test_doctor_fixes.py  test_doctor_preflight.py  test_entrypoints.py  test_eod_journal.py  test_executions_effect_table.py  test_fs_utils.py  test_greek_fallback.py  test_greeks_timeout.py  test_historic_prices.py  (+108 more)
tmp_test_run/: combos.db  net_liq_history_export.csv  trades_report_20250919_2119.csv
tools/: check_ib_port_defaults.py  check_sse.sh  logbook.py  sse_viewer.html
utils/: analysis.py  bs.py  ib.py  progress.py  technicals.py
(+177 files in other folders)
